# interview-AI-system

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: answer_analysis.py  base.py  interview_conductor.py  question_generation.py
backend/app/api/: router.py
backend/app/api/routes/: analysis.py  instructions.py  interview.py
backend/app/core/: config.py
backend/app/schemas/: analysis.py  instructions.py  interview.py
backend/app/services/: session_store.py
docs/: architecture.md
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AppShell.tsx
frontend/src/features/analysis/: AnalysisPanel.tsx
frontend/src/features/instructions/: InstructionsPanel.tsx
frontend/src/features/interview/: InterviewPanel.tsx
frontend/src/pages/: AnalysisPage.tsx  HomePage.tsx  InterviewPage.tsx
frontend/src/types/: interview.ts
